--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,12 +7,12 @@
     tools:context=".MainActivity">
 <ImageView
     android:id="@+id/displayview"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"/>
 <au.hao.and.dlibforandroid.faceDisplayView
     android:id="@+id/faceview"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/showtext"
@@ -33,4 +33,4 @@
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
