--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,8 +7,8 @@
     tools:context=".MainActivity">
 <ImageView
     android:id="@+id/displayview"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"/>
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"/>
 <au.hao.and.dlibforandroid.faceDisplayView
     android:id="@+id/faceview"
     android:layout_width="wrap_content"
